kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: solar-system
                port:
                  number: 3000
            path: /
            pathType: Prefix
